fix: close auth and catalog review gaps